# cpp-crm

./: .gitignore  CMakeLists.txt  README.md
docs/: inventory.md  reading_owning_polymorphic_objects.md
docs/daily_logs/: 2026-03-30.md  2026-03-31.md  2026-04-02.md  2026-04-03.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-22.md  2026-04-24.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-04.md  2026-05-05.md  2026-05-06.md
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  application.cpp  application.hpp  cli_helper.cpp  cli_helper.hpp  client_controller.cpp  client_controller.hpp  client_view.cpp  client_view.hpp  i_entity_controller.hpp  menu.cpp  menu.hpp  policy_controller.cpp  policy_controller.hpp  policy_view.cpp  policy_view.hpp
src/data/: CMakeLists.txt  csv_client_repository.cpp  csv_client_repository.hpp  csv_policy_repository.cpp  csv_policy_repository.hpp  file_handle.cpp  file_handle.hpp
src/domain/: CMakeLists.txt  client.cpp  client.hpp  client_data.hpp  client_status.cpp  client_status.hpp  i_client_repository.hpp  i_interaction_repository.hpp  i_policy_repository.hpp  interaction.hpp  policy.cpp  policy.hpp  policy_data.hpp  policy_status.cpp  policy_status.hpp  strops.cpp  strops.hpp  utils.cpp  utils.hpp  uuid.cpp  uuid.hpp
src/service/: CMakeLists.txt  client_service.cpp  client_service.hpp  policy_service.cpp  policy_service.hpp
